fixed extra scrollbar on devices which show scrollbars
The <body> had a disabled scrollbar right next to the <html>'s actual scrollbar.

--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,10 @@ html, body {
   user-select: none;
 }
 
+body {
+  overflow: hidden;
+}
+
 #background {
   position: fixed;
   width: 100%;
